# python-mdparse

./: CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  setup.cfg
src/mdparse/: __main__.py  transformer.py
src/mkdown/: __init__.py
src/mkdown/grammars/: markdown.lark
tasks/: build.py  qa.py
tests/: conftest.py  test_version.py
tests/markdown/: CHANGELOG.md.example  test_backquote.py  test_headers.py  test_lists.py  test_paragraph.py
