[metadata]
name = pygit2-example
version = 0.1.0
module = "pygit2_example"
author = "Jesse P. Johnson"
author_email = "jpj6652@gmail.com"
home-page = "https://github.com/kuwv/alpaca-logic"
classifiers =
    "License :: OSI Approved :: Apache Software License"

[options]
install_requires =
    pygit2
    lark
